--- a/layouts/partials/custom-head.html
+++ b/layouts/partials/custom-head.html
@@ -1,1 +1,10 @@
 <link href="{{"css/custom.css" | relURL}}" rel="stylesheet">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-40611028-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-40611028-3');
+</script>
