--- a/themes/docdock/static/revealjs/css/theme/template/theme.scss
+++ b/themes/docdock/static/revealjs/css/theme/template/theme.scss
@@ -348,5 +348,11 @@ body {
 		   -moz-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 		        transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 	}
-
+.imgadjust {
+	display: flex; 
+	justify-content: space-between";
+	img {
+		margin-top: 0;
+	}
+}
 
